--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 repository = "https://github.com/veminovici/tokio-stream-extra"
 license = "MIT OR Apache-2.0"
 exclude = ["/coverage"]
-documentation = "https://docs.rs/tokio-streams-extra"
+documentation = "https://docs.rs/tokio-stream-extra"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
